# Data-Struct-with-C

./: CMakeLists.txt  README.md
Session1/: 1.3_复数.c
Session2/: 2.4_线性表_顺序.c  2.4_线性表_顺序.h  2.5_线性表_链式.c  关于 .h 和 .c 的说明.md  练习_一元多项式加减_顺序.c
Session2_List/: 2.4_数组实现.c  2.4_数组实现.h  2.5.0_链表.c  2.5.4_双向链表.c  关于 .h 和 .c 的说明.md  本章说明.md  练习_1_一元多项式加减.c  练习_一元多项式加减.c
Session3_Stack/: 3.3.2_栈的顺序表示.c  练习_2_算式.c
Session3_Stack_Queue/: 3.3.3_链栈.h  3.5.2_数组队列.c  3.5.3_链表队列.c  3.5.3_链表队列.h  练习_2_算式.c
Session4_KMP/: 4.3_KMP_病毒.c
Session4_String/: 4.3_KMP.c
Session5_Tree/: 5.4_二叉树的实现.c  5.7_哈夫曼树.c
Session6_Graph/: 6.4.1_邻接矩阵.c  6.4.2_ALG.c
